实现缩略图

--- a/content/image-manager.less
+++ b/content/image-manager.less
@@ -19,4 +19,15 @@
             margin: 0;
         }
     }
+
+    .image-thumber {
+        margin  : 10px;
+        float   : left;
+        position: relative;
+    }
+
+    .image-upload {
+        margin: 10px;
+        float : left;
+    }
 }
