--- a/content/image-upload.less
+++ b/content/image-upload.less
@@ -12,10 +12,10 @@
 
     input[type="file"] {
         opacity : 0;
-        position: absolute;
+        position: relative;
         height  : @height;
         width   : @width;
-        top     : 0;
+        top     : -100px;
     }
 
     i {
