--- a/content/image-thumber.less
+++ b/content/image-thumber.less
@@ -1,5 +1,5 @@
 .image-thumber {
-    width   : 120px;
+    // width   : 120px;
     position: relative;
 
     .item {
@@ -56,7 +56,7 @@
             .triangle {
                 position     : relative;
                 top          : 19px;
-                left         : ~"calc(100% - 18px)";
+                left         : ~"calc(100% - 19px)";
                 width        : @size;
                 height       : @size;
                 margin-top   : -40px;
