增加 modal dialog , datasource select dialog

--- a/content/image-thumber.less
+++ b/content/image-thumber.less
@@ -7,6 +7,8 @@
         @item-inner-height: ~"calc(100% - 2px)";
         border            : solid 1px #ccc;
 
+        height: @item-inner-height;
+
         .bottom {
             display                 : block;
             overflow                : hidden;
