--- a/content/image-upload.less
+++ b/content/image-upload.less
@@ -3,6 +3,8 @@
     @height: 120px;
     @width : 120px;
 
+    // cursor: pointer;
+
     .item {
         border    : 1px solid rgb(204, 204, 204);
         text-align: center;
@@ -16,10 +18,13 @@
         height  : @height;
         width   : @width;
         top     : -100px;
+        cursor  : pointer
     }
 
     i {
         margin-top: 20px;
     }
+
+
 
 }
