--- a/content/image-manager.less
+++ b/content/image-manager.less
@@ -6,6 +6,10 @@
             margin-top   : 6px;
             margin-bottom: 6px;
         }
+
+        clear  : both;
+        display: table;
+        width  : 100%;
     }
 
     .modal-footer {
@@ -24,6 +28,9 @@
         margin  : 10px;
         float   : left;
         position: relative;
+        height  : 120px;
+        width   : 120px;
+        cursor  : pointer;
     }
 
     .image-upload {
