--- a/samples/modules/dialogs/dialog-data-source.scss
+++ b/samples/modules/dialogs/dialog-data-source.scss
@@ -1,9 +1,10 @@
 .dialog-data-source {
     .image-thumber {
-        width      : 120px;
-        height     : 120px;
-        margin-left: 10px;
-        margin-top : 10px;
+        width        : 120px;
+        height       : 120px;
+        margin-right : 10px;
+        margin-bottom: 10px;
+        float        : left;
     }
 
     .modal-body {
